Отредактировал разметку заголовков в разметке страницы

--- a/index.html
+++ b/index.html
@@ -457,7 +457,7 @@
 
                 </span>
                 <div class="advantages__content">
-                  <h3 class="advantages__title">Универсальный</h3>
+                  <b class="advantages__title">Универсальный</b>
                   <p class="advantages__description">
                     Независимо от того, где производится съемка: на улице или в помещении (в том числе и в шахте),
                     LiGrip предоставляет надежные и точные результаты, благодаря различным сценариям обработки
