--- a/index.html
+++ b/index.html
@@ -48,24 +48,26 @@
       </div>
 
       <!-- Навигация  -->
-      <div class="header__nav">
+      <div class="header__nav main-navigation">
         <nav>
-          <ul class="list-reset">
-            <li>
-              <a href="#">Оборудование</a>
+          <ul class="main-navigation__list list-reset">
+            <li class="main-navigation__item">
+              <a class="main-navigation__link" href="#">Оборудование</a>
             </li>
-            <li>
-              <a href="#">Области применения</a>
+            <li class="main-navigation__item">
+              <a class="main-navigation__link" href="#">Области применения</a>
             </li>
-            <li>
-              <a href="#">О компании</a>
+            <li class="main-navigation__item">
+              <a class="main-navigation__link" href="#">О компании</a>
             </li>
-            <li>
-              <a href="#">Контакты</a>
+            <li class="main-navigation__item">
+              <a class="main-navigation__link" href="#">Контакты</a>
             </li>
           </ul>
         </nav>
       </div>
+
+      <div class="header__left">
 
       <!-- Контакты  -->
       <div class="header__contacts">
@@ -77,6 +79,7 @@
           <span></span>
         </button>
       </div>
+    </div>
 
     </div>
   </header>
