--- a/index.html
+++ b/index.html
@@ -15,122 +15,188 @@
 <body class="body">
 
   <!-- Шапка  -->
-  <header class="header">
-    <div class="header__grid grid-base">
+  <div class="fixed-group">
+    <header class="header">
+      <div class="wrapper">
+        <div class="header__grid">
 
-      <!-- Лого  -->
-      <div class="header__logo">
-        <a class="logotype" href="#">
-          <svg viewBox="0 0 136 64" fill="none" xmlns="http://www.w3.org/2000/svg">
-            <path
-              d="M51.7981 20.5552C53.7905 18.8484 60.2742 11.8699 62.6629 13.8682C65.0575 15.8694 64.68 18.3377 67.0717 20.339C67.6585 19.9042 68.8307 19.0346 69.4168 18.6013C71.2073 19.7915 72.4418 23.9044 73.0279 23.4703C75.9906 23.791 72.444 26.5297 74.7899 24.7928C75.9928 26.4163 77.7826 27.6012 77.2101 29.2803C57.8849 46.1088 54.3856 51.1115 32.0541 63.8781C29.1072 64.8055 28.4618 60.2571 28.4175 56.5205C28.4333 57.7678 26.6277 55.3325 26.6435 56.5798C24.838 54.1453 23.0039 49.2191 24.7479 46.6682L51.7981 20.5552Z"
-              fill="#FF9600" />
-            <path
-              d="M51.7982 20.5553C52.3437 20.0882 53.227 19.2254 54.2686 18.2597C53.1512 19.0384 52.2222 19.4972 51.7066 19.1548C48.7439 18.8379 51.0762 15.853 52.8353 14.5523C51.0455 13.3614 54.0075 13.6813 52.8068 12.0585C50.3994 8.80996 47.9927 5.56743 43.8443 4.86981C42.6534 4.48984 41.4369 1.62427 40.2362 0C33.1979 5.21299 30.2022 4.91035 25.5712 13.3711C21.5106 20.1491 11.8278 21.9092 8.00505 28.8944C6.84863 31.0083 1.50704 29.9322 3.3456 34.8614L5.10237 33.5592C5.1489 37.2929 1.58433 36.1657 0.427155 38.2766C1.52354 39.7597 2.11488 40.5677 2.22069 41.6423C1.47851 41.5935 -0.946143 42.2663 0.399387 42.2198L2.20418 44.6543C1.63385 46.3364 4.62209 42.7124 4.04876 44.39C4.65061 45.2032 5.8543 46.8268 6.4554 47.6378C7.05725 48.451 6.47117 48.8851 5.88508 49.3184C6.47117 48.8851 7.64409 48.0147 8.23018 47.5807C8.83203 48.3917 10.0327 50.013 10.6346 50.824C11.2364 51.6342 10.6503 52.0705 10.0612 52.5046C11.2672 54.1281 21.8003 47.5935 22.9882 47.9712L24.7473 46.6668L51.7982 20.5553Z"
-              fill="#F05000" />
-            <path
-              d="M21.5991 23.1436L31.2301 39.9277H26.8364L24.8507 36.2857H14.178L12.2569 39.9277H8.31787L17.8229 23.1436H21.5991ZM23.1922 33.2249L19.5459 26.3958L15.7719 33.2249H23.1922Z"
-              fill="white" />
-            <path
-              d="M46.9616 23.1436C47.778 23.1436 48.8857 23.239 49.6324 23.8562C50.5419 24.5749 50.6064 25.6149 50.6064 26.3966V30.1378C50.6064 30.5613 50.5779 31.8627 49.7307 32.6076C48.8857 33.357 47.2903 33.3878 46.8332 33.3878H36.3564V39.927H32.4519V23.1428H46.9616M36.3564 26.0076V30.5283H44.9452C45.598 30.5283 46.022 30.4637 46.2802 30.2669C46.7034 29.941 46.7034 29.4529 46.7034 29.1916V27.3391C46.7034 27.0777 46.7034 26.5896 46.2802 26.2682C46.022 26.0715 45.598 26.0069 44.9452 26.0069H36.3564V26.0076Z"
-              fill="white" />
-            <path d="M65.3645 39.9277H61.46V26.1999H53.7471V23.1436H73.0798V26.1999H65.3645V39.9277Z" fill="white" />
-            <path d="M92.05 23.1436V26.1999H80.1414V39.9277H76.2361V23.1436H92.05Z" fill="#1D1D1B" />
-            <path
-              d="M112.451 23.1436V26.0076H99.1752V29.748H106.923V32.6076H99.1752V36.8684H112.617V39.9277H95.2744V23.1436H112.451Z"
-              fill="#1D1D1B" />
-            <path
-              d="M115.304 27.1092C115.304 26.3966 115.304 24.8332 116.218 23.9576C117.029 23.1744 118.398 23.1436 119.467 23.1436H131.836C132.908 23.1436 134.277 23.1744 135.088 23.9576C136 24.8332 136 26.3966 136 27.1092V35.9575C136 36.6761 136 38.2381 135.088 39.1152C134.277 39.8954 132.908 39.9277 131.836 39.9277H119.467C118.398 39.9277 117.029 39.8954 116.218 39.1152C115.304 38.2381 115.304 36.6761 115.304 35.9575V27.1092ZM119.209 36.8684H132.094V26.1999H119.209V36.8684Z"
-              fill="#1D1D1B" />
-          </svg>
+          <!-- Лого  -->
+          <div class="header__logo">
+            <a class="logotype" href="#">
+              <svg viewBox="0 0 136 64" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path
+                  d="M51.7981 20.5552C53.7905 18.8484 60.2742 11.8699 62.6629 13.8682C65.0575 15.8694 64.68 18.3377 67.0717 20.339C67.6585 19.9042 68.8307 19.0346 69.4168 18.6013C71.2073 19.7915 72.4418 23.9044 73.0279 23.4703C75.9906 23.791 72.444 26.5297 74.7899 24.7928C75.9928 26.4163 77.7826 27.6012 77.2101 29.2803C57.8849 46.1088 54.3856 51.1115 32.0541 63.8781C29.1072 64.8055 28.4618 60.2571 28.4175 56.5205C28.4333 57.7678 26.6277 55.3325 26.6435 56.5798C24.838 54.1453 23.0039 49.2191 24.7479 46.6682L51.7981 20.5552Z"
+                  fill="#FF9600" />
+                <path
+                  d="M51.7982 20.5553C52.3437 20.0882 53.227 19.2254 54.2686 18.2597C53.1512 19.0384 52.2222 19.4972 51.7066 19.1548C48.7439 18.8379 51.0762 15.853 52.8353 14.5523C51.0455 13.3614 54.0075 13.6813 52.8068 12.0585C50.3994 8.80996 47.9927 5.56743 43.8443 4.86981C42.6534 4.48984 41.4369 1.62427 40.2362 0C33.1979 5.21299 30.2022 4.91035 25.5712 13.3711C21.5106 20.1491 11.8278 21.9092 8.00505 28.8944C6.84863 31.0083 1.50704 29.9322 3.3456 34.8614L5.10237 33.5592C5.1489 37.2929 1.58433 36.1657 0.427155 38.2766C1.52354 39.7597 2.11488 40.5677 2.22069 41.6423C1.47851 41.5935 -0.946143 42.2663 0.399387 42.2198L2.20418 44.6543C1.63385 46.3364 4.62209 42.7124 4.04876 44.39C4.65061 45.2032 5.8543 46.8268 6.4554 47.6378C7.05725 48.451 6.47117 48.8851 5.88508 49.3184C6.47117 48.8851 7.64409 48.0147 8.23018 47.5807C8.83203 48.3917 10.0327 50.013 10.6346 50.824C11.2364 51.6342 10.6503 52.0705 10.0612 52.5046C11.2672 54.1281 21.8003 47.5935 22.9882 47.9712L24.7473 46.6668L51.7982 20.5553Z"
+                  fill="#F05000" />
+                <path
+                  d="M21.5991 23.1436L31.2301 39.9277H26.8364L24.8507 36.2857H14.178L12.2569 39.9277H8.31787L17.8229 23.1436H21.5991ZM23.1922 33.2249L19.5459 26.3958L15.7719 33.2249H23.1922Z"
+                  fill="white" />
+                <path
+                  d="M46.9616 23.1436C47.778 23.1436 48.8857 23.239 49.6324 23.8562C50.5419 24.5749 50.6064 25.6149 50.6064 26.3966V30.1378C50.6064 30.5613 50.5779 31.8627 49.7307 32.6076C48.8857 33.357 47.2903 33.3878 46.8332 33.3878H36.3564V39.927H32.4519V23.1428H46.9616M36.3564 26.0076V30.5283H44.9452C45.598 30.5283 46.022 30.4637 46.2802 30.2669C46.7034 29.941 46.7034 29.4529 46.7034 29.1916V27.3391C46.7034 27.0777 46.7034 26.5896 46.2802 26.2682C46.022 26.0715 45.598 26.0069 44.9452 26.0069H36.3564V26.0076Z"
+                  fill="white" />
+                <path d="M65.3645 39.9277H61.46V26.1999H53.7471V23.1436H73.0798V26.1999H65.3645V39.9277Z"
+                  fill="white" />
+                <path d="M92.05 23.1436V26.1999H80.1414V39.9277H76.2361V23.1436H92.05Z" fill="#1D1D1B" />
+                <path
+                  d="M112.451 23.1436V26.0076H99.1752V29.748H106.923V32.6076H99.1752V36.8684H112.617V39.9277H95.2744V23.1436H112.451Z"
+                  fill="#1D1D1B" />
+                <path
+                  d="M115.304 27.1092C115.304 26.3966 115.304 24.8332 116.218 23.9576C117.029 23.1744 118.398 23.1436 119.467 23.1436H131.836C132.908 23.1436 134.277 23.1744 135.088 23.9576C136 24.8332 136 26.3966 136 27.1092V35.9575C136 36.6761 136 38.2381 135.088 39.1152C134.277 39.8954 132.908 39.9277 131.836 39.9277H119.467C118.398 39.9277 117.029 39.8954 116.218 39.1152C115.304 38.2381 115.304 36.6761 115.304 35.9575V27.1092ZM119.209 36.8684H132.094V26.1999H119.209V36.8684Z"
+                  fill="#1D1D1B" />
+              </svg>
 
-        </a>
+            </a>
+          </div>
+
+          <!-- Навигация  -->
+          <div class="header__nav">
+            <div class="main-navigation">
+              <nav>
+                <ul class="main-navigation__list list-reset">
+                  <li class="main-navigation__item">
+                    <a class="main-navigation__link" href="#">Оборудование</a>
+                  </li>
+                  <li class="main-navigation__item">
+                    <a class="main-navigation__link" href="#">Области применения</a>
+                  </li>
+                  <li class="main-navigation__item">
+                    <a class="main-navigation__link" href="#">О компании</a>
+                  </li>
+                  <li class="main-navigation__item">
+                    <a class="main-navigation__link" href="#">Контакты</a>
+                  </li>
+                </ul>
+              </nav>
+            </div>
+          </div>
+
+          <div class="header__left">
+
+            <!-- Контакты  -->
+            <div class="header__contacts">
+              <a href="tel:+74957817888" class="header__tel link link--mod">+7 (495) 781-7888</a>
+
+              <a class="header__link link" href="#" data-target="modal-call-back">Получить консультацию</a>
+
+            </div>
+            <!-- Кнопка показать меню  -->
+            <button class="header__button-menu button-menu js-menu-btn" title="Открыть меню сайта">
+              <span></span>
+            </button>
+          </div>
+
+        </div>
       </div>
+    </header>
 
-      <!-- Навигация  -->
-      <div class="header__nav main-navigation">
-        <nav>
-          <ul class="main-navigation__list list-reset">
-            <li class="main-navigation__item">
-              <a class="main-navigation__link" href="#">Оборудование</a>
-            </li>
-            <li class="main-navigation__item">
-              <a class="main-navigation__link" href="#">Области применения</a>
-            </li>
-            <li class="main-navigation__item">
-              <a class="main-navigation__link" href="#">О компании</a>
-            </li>
-            <li class="main-navigation__item">
-              <a class="main-navigation__link" href="#">Контакты</a>
-            </li>
-          </ul>
-        </nav>
-      </div>
+    <!-- Мобильная навигация  -->
+    <div class="mobile-navigation">
+      <div class="mobile-navigation__container">
+        <div class="wrapper">
 
-      <div class="header__left">
-
-      <!-- Контакты  -->
-      <div class="header__contacts">
-        <a href="tel:+74957817888" class="header__tel link link--mod">+7 (495) 781-7888</a>
-
-        <a class="header__link link" href="#" data-target="modal-call-back">Получить консультацию</a>
-        <!-- Кнопка показать меню  -->
-        <button class="header__button-menu button-menu js-menu-btn" title="Открыть меню сайта">
-          <span></span>
-        </button>
+          <nav>
+            <ul class="mobile-navigation__list list-reset">
+              <li class="mobile-navigation__item">
+                <a class="mobile-navigation__link" href="#">
+                  <span>Оборудование</span>
+                  <span class="mobile-navigation__icon"><svg width="13" height="22" viewBox="0 0 13 22" fill="none"
+                      xmlns="http://www.w3.org/2000/svg">
+                      <path d="M1 1L11 11L1 21" stroke="currentColor" stroke-width="2" />
+                    </svg>
+                  </span>
+                </a>
+              </li>
+              <li class="mobile-navigation__item">
+                <a class="mobile-navigation__link" href="#">
+                  <span>Области применения</span>
+                  <span class="mobile-navigation__icon"><svg width="13" height="22" viewBox="0 0 13 22" fill="none"
+                      xmlns="http://www.w3.org/2000/svg">
+                      <path d="M1 1L11 11L1 21" stroke="currentColor" stroke-width="2" />
+                    </svg>
+                  </span>
+                </a>
+              </li>
+              <li class="mobile-navigation__item">
+                <a class="mobile-navigation__link" href="#">
+                  <span>О компании</span>
+                  <span class="mobile-navigation__icon"><svg width="13" height="22" viewBox="0 0 13 22" fill="none"
+                      xmlns="http://www.w3.org/2000/svg">
+                      <path d="M1 1L11 11L1 21" stroke="currentColor" stroke-width="2" />
+                    </svg>
+                  </span>
+                </a>
+              </li>
+              <li class="mobile-navigation__item">
+                <a class="mobile-navigation__link" href="#">
+                  <span>Контакты</span>
+                  <span class="mobile-navigation__icon"><svg width="13" height="22" viewBox="0 0 13 22" fill="none"
+                      xmlns="http://www.w3.org/2000/svg">
+                      <path d="M1 1L11 11L1 21" stroke="currentColor" stroke-width="2" />
+                    </svg>
+                  </span>
+                </a>
+              </li>
+            </ul>
+          </nav>
+        </div>
       </div>
     </div>
 
-    </div>
-  </header>
+  </div>
 
   <main class="main">
 
     <!-- Первый экран  -->
     <section class="hero">
-      <div class="">
+      <div class="wrapper">
+        <p class="hero__text">Откройте для себя серию портативных сканеров от GreenValley International</p>
+        <h1 class="hero__title title">Ручные лазерные сканеры LiGrip</h1>
 
-        <div class="hero__wrapper wrapper">
-          <p class="hero__text">Откройте для себя серию портативных сканеров от GreenValley International</p>
-          <h1 class="hero__title title">Ручные лазерные сканеры LiGrip</h1>
+        <div class="buttons-grid">
 
-          <div class="hero__links">
+          <a href="#" class="button">
+            <span>Смотреть брошюру</span>
+          </a>
 
-            <a href="#" class="hero__link">
+          <a href="#" class="button button--icon">
+            <span class="button__icon">
               <svg width="17" height="18" viewBox="0 0 17 18" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <path
                   d="M3.40479 3.95238V1.7619C3.40479 1.34133 3.74612 1 4.16669 1H12.5476L15.5953 4.04762V16.2381C15.5953 16.6587 15.2539 17 14.8334 17H4.16669C3.74612 17 3.40479 16.6587 3.40479 16.2381V15"
-                  stroke="#F05000" stroke-width="2" stroke-miterlimit="10" />
-                <path d="M15.4048 5H11.4048V1" stroke="#F05000" stroke-width="2" stroke-miterlimit="10" />
+                  stroke="currentColor" stroke-width="2" stroke-miterlimit="10" />
+                <path d="M15.4048 5H11.4048V1" stroke="currentColor" stroke-width="2" stroke-miterlimit="10" />
                 <path
                   d="M1.40479 6.55416V12.4462C1.40479 12.8721 1.85111 13.1382 2.2081 12.9247L7.13762 9.9785C7.49384 9.76539 7.49384 9.23421 7.13762 9.02111L2.2081 6.07487C1.85111 5.86216 1.40479 6.12795 1.40479 6.55416Z"
-                  stroke="#F05000" stroke-width="2" stroke-miterlimit="10" stroke-linejoin="round" />
+                  stroke="currentColor" stroke-width="2" stroke-miterlimit="10" stroke-linejoin="round" />
               </svg>
+            </span>
 
-              <span>Смотреть брошюру</span>
-            </a>
 
-            <a href="#" class="hero__link">
-              <svg width="17" height="18" viewBox="0 0 17 18" fill="none" xmlns="http://www.w3.org/2000/svg">
-                <path
-                  d="M3.40479 3.95238V1.7619C3.40479 1.34133 3.74612 1 4.16669 1H12.5476L15.5953 4.04762V16.2381C15.5953 16.6587 15.2539 17 14.8334 17H4.16669C3.74612 17 3.40479 16.6587 3.40479 16.2381V15"
-                  stroke="#F05000" stroke-width="2" stroke-miterlimit="10" />
-                <path d="M15.4048 5H11.4048V1" stroke="#F05000" stroke-width="2" stroke-miterlimit="10" />
-                <path d="M7.18256 10V6H3.62701V10H1.40479L5.40479 14L9.40479 10H7.18256Z" stroke="#F05000"
-                  stroke-width="2" stroke-miterlimit="10" stroke-linejoin="round" />
-              </svg>
+            <span>Смотреть брошюру</span>
+          </a>
 
-              <span>Документация</span>
-            </a>
-          </div>
-
-          <div class="hero__image">
-            <img src="./img/hero/1.png" alt="фото" loading="lazy">
-          </div>
+          <a href="#" class="button button--icon button--mod">
+            <span class="button__icon">
+            <svg width="17" height="18" viewBox="0 0 17 18" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <path
+                d="M3.40479 3.95238V1.7619C3.40479 1.34133 3.74612 1 4.16669 1H12.5476L15.5953 4.04762V16.2381C15.5953 16.6587 15.2539 17 14.8334 17H4.16669C3.74612 17 3.40479 16.6587 3.40479 16.2381V15"
+                stroke="currentColor" stroke-width="2" stroke-miterlimit="10" />
+              <path d="M15.4048 5H11.4048V1" stroke="currentColor" stroke-width="2" stroke-miterlimit="10" />
+              <path d="M7.18256 10V6H3.62701V10H1.40479L5.40479 14L9.40479 10H7.18256Z" stroke="currentColor"
+                stroke-width="2" stroke-miterlimit="10" stroke-linejoin="round" />
+            </svg>
+          </span>
+            <span>Документация</span>
+          </a>
         </div>
 
-
+        <div class="hero__image">
+          <img src="./img/hero/1.png" alt="фото" loading="lazy">
+        </div>
       </div>
+
     </section>
 
     <!-- Галерея  -->
