Секция "Где необходим"

--- a/index.html
+++ b/index.html
@@ -581,7 +581,7 @@
     </section>
 
     <!-- Оставьте заявку  -->
-    <section class="form-block">
+    <section class="form-block section">
       <div class="wrapper">
         <div class="form-block__grid">
           <div class="form-block__grid-item">
@@ -618,10 +618,10 @@
     </section>
 
     <!-- Где необходим  -->
-    <section class="applications">
-      <div class="applications__container">
-        <p class="applications__subtitle">Где необходим?</p>
-        <h2 class="applications__title title">Области применения LiGrip</h2>
+    <section class="applications section section--black">
+      <div class="wrapper">
+        <p class="label">Где необходим?</p>
+        <h2 class="title">Области применения LiGrip</h2>
         <ul class="applications__list list-reset">
           <li class="applications__item">
             <img src="./img/applications/1.jpg" alt="Вычисление объёмов материалов" class="applications__image">
@@ -678,7 +678,7 @@
     </section>
 
     <!-- Оставьте заявку  -->
-    <section class="form-block">
+    <section class="form-block section">
       <div class="wrapper">
         <div class="form-block__grid">
           <div class="form-block__grid-item">
@@ -715,7 +715,7 @@
     </section>
 
     <!-- Почему выбирают нас  -->
-    <section class="why-us">
+    <section class="why-us section">
       <div class="why-us__container">
         <div class="why-us__intro">
           <p class="why-us__tagline">Выбирайте нас</p>
