--- a/index.html
+++ b/index.html
@@ -57,16 +57,16 @@
               <nav>
                 <ul class="main-navigation__list list-reset">
                   <li class="main-navigation__item">
-                    <a class="main-navigation__link" href="#">Оборудование</a>
+                    <a class="main-navigation__link" href="#anchor-overview">Оборудование</a>
                   </li>
                   <li class="main-navigation__item">
-                    <a class="main-navigation__link" href="#">Области применения</a>
+                    <a class="main-navigation__link" href="#anchor-applications">Области применения</a>
                   </li>
                   <li class="main-navigation__item">
-                    <a class="main-navigation__link" href="#">О компании</a>
+                    <a class="main-navigation__link" href="#anchor-why-us">О компании</a>
                   </li>
                   <li class="main-navigation__item">
-                    <a class="main-navigation__link" href="#">Контакты</a>
+                    <a class="main-navigation__link" href="#anchor-footer">Контакты</a>
                   </li>
                 </ul>
               </nav>
@@ -93,14 +93,14 @@
     </header>
 
     <!-- Мобильная навигация  -->
-    <div class="mobile-navigation">
+    <div class="mobile-navigation js-mobile-nav">
       <div class="mobile-navigation__container">
         <div class="wrapper">
 
           <nav>
             <ul class="mobile-navigation__list list-reset">
               <li class="mobile-navigation__item">
-                <a class="mobile-navigation__link" href="#">
+                <a class="mobile-navigation__link" href="#anchor-overview">
                   <span>Оборудование</span>
                   <span class="mobile-navigation__icon"><svg width="13" height="22" viewBox="0 0 13 22" fill="none"
                       xmlns="http://www.w3.org/2000/svg">
@@ -110,7 +110,7 @@
                 </a>
               </li>
               <li class="mobile-navigation__item">
-                <a class="mobile-navigation__link" href="#">
+                <a class="mobile-navigation__link" href="#anchor-applications">
                   <span>Области применения</span>
                   <span class="mobile-navigation__icon"><svg width="13" height="22" viewBox="0 0 13 22" fill="none"
                       xmlns="http://www.w3.org/2000/svg">
@@ -120,7 +120,7 @@
                 </a>
               </li>
               <li class="mobile-navigation__item">
-                <a class="mobile-navigation__link" href="#">
+                <a class="mobile-navigation__link" href="#anchor-why-us">
                   <span>О компании</span>
                   <span class="mobile-navigation__icon"><svg width="13" height="22" viewBox="0 0 13 22" fill="none"
                       xmlns="http://www.w3.org/2000/svg">
@@ -130,7 +130,7 @@
                 </a>
               </li>
               <li class="mobile-navigation__item">
-                <a class="mobile-navigation__link" href="#">
+                <a class="mobile-navigation__link" href="#anchor-footer">
                   <span>Контакты</span>
                   <span class="mobile-navigation__icon"><svg width="13" height="22" viewBox="0 0 13 22" fill="none"
                       xmlns="http://www.w3.org/2000/svg">
@@ -150,7 +150,7 @@
   <main class="main">
 
     <!-- Первый экран  -->
-    <section class="hero">
+    <section class="hero" id="anchor-hero">
 
       <!-- Видео фон  -->
       <div class="hero__video">
@@ -210,7 +210,7 @@
     </section>
 
     <!-- Галерея  -->
-    <section class="gallery section">
+    <section class="gallery section" id="anchor-gallery">
 
       <header class="gallery__header">
         <div class="wrapper">
@@ -294,7 +294,7 @@
     </section>
 
     <!-- Обзор оборудования  -->
-    <section class="overview section">
+    <section class="overview section" id="anchor-overview">
       <div class="wrapper">
 
         <div class="overview__grid">
@@ -582,7 +582,7 @@
     </section>
 
     <!-- Оставьте заявку  -->
-    <section class="feedback section">
+    <section class="feedback section" id="anchor-feedback-1">
       <div class="wrapper">
         <div class="feedback__grid">
           <div class="feedback__grid-column feedback__grid-column--left">
@@ -635,7 +635,7 @@
     </section>
 
     <!-- Где необходим  -->
-    <section class="applications section section--black">
+    <section class="applications section section--black" id="anchor-applications">
       <div class="wrapper">
         <p class="label">Где необходим?</p>
         <h2 class="title">Области применения LiGrip</h2>
@@ -695,7 +695,7 @@
     </section>
 
     <!-- Оставьте заявку 2 -->
-    <section class="feedback section">
+    <section class="feedback section" id="anchor-feedback-2">
       <div class="wrapper">
         <div class="feedback__grid">
           <div class="feedback__grid-column feedback__grid-column--left">
@@ -749,7 +749,7 @@
     </section>
 
     <!-- Почему выбирают нас  -->
-    <section class="why-us section">
+    <section class="why-us section" id="anchor-why-us">
       <div class="wrapper">
         <p class="label">Выбирайте нас</p>
         <h2 class="title">Почему стоит выбрать АртГео?</h2>
@@ -883,7 +883,7 @@
 
   </main>
 
-  <footer class="footer ">
+  <footer class="footer" id="anchor-footer">
     <div class="wrapper">
       <div class="footer__grid">
 
@@ -972,14 +972,12 @@
 
         <div class="footer__column footer__column--mod">
           <div class="footer__map">
-            <iframe
-              src="https://yandex.ru/map-widget/v1/?um=constructor%3Adee8c0e2a1b0f8dd9c3a3b65dbb7f5f1283f8c5db0ad2327f7a3b108d20ebf77&amp;source=constructor"
-              width="100%" height="400" frameborder="0"></iframe>
+              <!-- карта  -->
+            <div class="map">
+              <div class="map__content js-map" id="map"></div>
+            </div>
           </div>
         </div>
-
-
-
 
       </div>
   </footer>
@@ -1033,65 +1031,9 @@
                   <path d="M9.93137 14.2245L15.164 16.152L19 1.5L1 10.736L6.5 13" stroke="white" stroke-width="2" stroke-miterlimit="10" stroke-linejoin="round"/>
                   <path d="M6.89013 19.5L6 13L13.0209 7.97974L6.89013 19.5Z" stroke="white" stroke-width="2" stroke-miterlimit="10" stroke-linejoin="round"/>
                   </svg>
-
-
                 <span>Отправить</span></button>
             </div>
           </form>
-          <!-- <form action="#">
-            <div class="form__grid">
-              <div class="form__item">
-                <div class="form__element">
-                  <input type="text" name="user-name" id="user-name" placeholder="Укажите имя" required>
-                </div>
-
-              </div>
-
-              <div class="form__item">
-                <div class="form__element">
-                  <input type="tel" name="user-phone" id="user-phone" placeholder="Телефон" required>
-                </div>
-
-              </div>
-
-              <div class="form__item">
-                <div class="form__element">
-                  <input type="email" name="user-email" id="user-email" placeholder="E-mail" required>
-                </div>
-                <div class="form__element">
-                  <textarea name="user-message" id="user-message" placeholder="Сообщение"></textarea>
-                </div>
-
-              </div>
-
-              <div class="form__item form__textarea">
-                <div class="form__element">
-                  <textarea name="user-message" id="user-message" placeholder="Сообщение"></textarea>
-                </div>
-
-              </div>
-
-              <div class="form__grid-item form__footer">
-
-                <div class="form__agree">
-                  <input type="checkbox" name="user-agree" id="user-agree" required checked>
-                  <label for="user-agree">Я выражаю свое согласие с Политикой конфиденциальности и разрешаю обработку
-                    своих персональных данных</label>
-                </div>
-
-                <button class="form__button button" type="submit">
-                  <svg width="20" height="21" viewBox="0 0 20 21" fill="none" xmlns="http://www.w3.org/2000/svg">
-                    <path d="M9.93137 14.2245L15.164 16.152L19 1.5L1 10.736L6.5 13" stroke="white" stroke-width="2"
-                      stroke-miterlimit="10" stroke-linejoin="round" />
-                    <path d="M6.89013 19.5L6 13L13.0209 7.97974L6.89013 19.5Z" stroke="white" stroke-width="2"
-                      stroke-miterlimit="10" stroke-linejoin="round" />
-                  </svg>
-
-                  <span>Отправить</span></button>
-              </div>
-            </div>
-
-          </form> -->
         </div>
 
         <!-- Кнопка закрытия окна  -->
@@ -1115,23 +1057,25 @@
 
       <div class="modal__body">
 
-        <span class="modal__label">Спасибо за обращение наши специалисты ответят в ближайшее время</span>
-        <h2 class="modal__title title">Сообщение отправлено</h2>
-
-        <a class="form__button button">
-          <svg width="19" height="19" viewBox="0 0 19 19" fill="none" xmlns="http://www.w3.org/2000/svg">
-            <path d="M1.5 1.5L17.5 17.5" stroke="white" stroke-width="2" />
-            <path d="M17.5 1.5L1.5 17.5" stroke="white" stroke-width="2" />
-          </svg>
-          <span>Закрыть</span>
-        </a>
+        <span class="label">Спасибо за обращение наши специалисты ответят в ближайшее время</span>
+        <h2 class="title">Сообщение отправлено</h2>
+        <br>
+        <button class="button button--icon">
+          <span class="button__icon">
+            <svg width="19" height="19" viewBox="0 0 19 19" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <path d="M1.5 1.5L17.5 17.5" stroke="white" stroke-width="2"/>
+            <path d="M17.5 1.5L1.5 17.5" stroke="white" stroke-width="2"/>
+            </svg>
+            </span>
+          <span>Закрыть</span></button>
 
         <!-- Кнопка закрытия окна  -->
         <button class="modal__close js-close-modal" type="button" title="Закрыть окно">
           <svg width="18" height="18" viewBox="0 0 18 18" fill="none" xmlns="http://www.w3.org/2000/svg">
-            <path d="M1 1L17 17" stroke="white" stroke-width="2" />
-            <path d="M17 1L1 17" stroke="white" stroke-width="2" />
-          </svg>
+            <path d="M1 1L17 17" stroke="white" stroke-width="2"/>
+            <path d="M17 1L1 17" stroke="white" stroke-width="2"/>
+            </svg>
+
         </button>
 
       </div>
@@ -1139,6 +1083,10 @@
 
     </div>
   </section>
+
+  <!-- Карта  -->
+  <script src="https://api-maps.yandex.ru/2.1/?apikey=1dba075a-a65a-4b22-84a2-ebb26f26fe43&lang=ru_RU"
+    type="text/javascript" defer></script>
 
   <!-- Скрипты и библиотеки -->
   <script src="./libs/fslightbox.min.js"></script>
@@ -1152,6 +1100,9 @@
   <script src="./js/parts/mobile-menu-and-button.js"></script>
   <script src="./js/parts/modals.js"></script>
   <script src="./js/main.js"></script>
+
+
+  <script src="./js/parts/map.js" defer></script>
 
 </body>
 
