--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
 
           <div class="gallery__header-grid">
             <div class="gallery__header-column">
-              <span class="gallery__label label">Галерея</span>
+              <span class="label">Галерея</span>
               <h2 class="gallery__title title">LiGrip – это новая серия лазерных сканеров GreenValley International</h2>
             </div>
             <div class="gallery__header-column">
@@ -761,8 +761,8 @@
 
               <div class="form__footer">
                 <div class="form__check">
-                  <input type="checkbox" class="visually-hidden" id="user-agreement-1" name="user-agreement" required>
-                  <label for="user-agreement-1">
+                  <input type="checkbox" class="visually-hidden" id="user-agreement-2" name="user-agreement" required>
+                  <label for="user-agreement-2">
                     Я выражаю свое согласие с Политикой конфиденциальности и разрешаю<br>
                     обработку своих персональных данных.
                   </label>
@@ -805,7 +805,7 @@
 
             <div class="features">
               <ul class="features__list list-reset">
-                <li class="features__feature">
+                <li class="features__item">
                   <div class="features__icon">
                     <svg width="41" height="42" viewBox="0 0 41 42" fill="none" xmlns="http://www.w3.org/2000/svg">
                       <path
@@ -820,7 +820,7 @@
                   </div>
                   <p class="features__text">Оказываем квалифицированную техническую поддержку</p>
                 </li>
-                <li class="features__feature">
+                <li class="features__item">
                   <div class="features__icon">
                     <svg width="40" height="42" viewBox="0 0 40 42" fill="none" xmlns="http://www.w3.org/2000/svg">
                       <path
@@ -840,7 +840,7 @@
                   </div>
                   <p class="features__text">Качество и надежность поставляемых решений</p>
                 </li>
-                <li class="features__feature">
+                <li class="features__item">
                   <div class="features__icon">
                     <svg width="46" height="42" viewBox="0 0 46 42" fill="none" xmlns="http://www.w3.org/2000/svg">
                       <path d="M11.534 25.846C10.738 25.946 9.886 26 9 26C4.582 26 1 24.657 1 23" stroke="#F05000"
@@ -1061,8 +1061,8 @@
 
             <div class="form__footer">
               <div class="form__check">
-                <input type="checkbox" class="visually-hidden" id="user-agreement-2" name="user-agreement" required>
-                <label for="user-agreement-2">
+                <input type="checkbox" class="visually-hidden" id="user-agreement-3" name="user-agreement" required>
+                <label for="user-agreement-3">
                   Я выражаю свое согласие с Политикой конфиденциальности и разрешаю<br>
                   обработку своих персональных данных.
                 </label>
